ip restrictions added

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL='mysql://8lxma3y7cu1wp5tijv21:pscale_pw_gIvFufULBP3C3gaVd5ICchU4FIFzoDagySUfChCHjDk@aws.connect.psdb.cloud/solflowerfarm?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://hyupckv5lihwzqkurdy9:pscale_pw_DUURGB4yYn1XWNaA24QdDYf7ZRm5NYMwvBXyASvg8Jj@aws.connect.psdb.cloud/solflowerfarm?ssl={"rejectUnauthorized":true}'
