--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL='mysql://hyupckv5lihwzqkurdy9:pscale_pw_DUURGB4yYn1XWNaA24QdDYf7ZRm5NYMwvBXyASvg8Jj@aws.connect.psdb.cloud/solflowerfarm?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://e5ft6c5hoxclpbehsqct:pscale_pw_kbpdpt13sKNXDBKA8FTCrnrK6kU8GjkdLGqpdn7rG1f@aws.connect.psdb.cloud/solflowerfarm?ssl={"rejectUnauthorized":true}'
