--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL='mysql://e5ft6c5hoxclpbehsqct:pscale_pw_kbpdpt13sKNXDBKA8FTCrnrK6kU8GjkdLGqpdn7rG1f@aws.connect.psdb.cloud/solflowerfarm?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://b24fh11b53pyhh26qcw4:pscale_pw_G6bFrVr6v2ziEsIbvnYIm0bTpe5dJXSPXTQMWw9QuaB@aws.connect.psdb.cloud/solflowerfarm?ssl={"rejectUnauthorized":true}'
